# funch

./: .gitignore  README.md  pyproject.toml
src/funch/: __init__.py  cli.py
src/funch/evaluator/: __init__.py  from_template.py  interface.py
src/funch/llm/: client.py
src/funch/parsers/: __init__.py  decorator.py  function_body.py  program.py
src/funch/storage/: __init__.py
src/funch/storage/item_storage/: lazy_storage.py  split_storage.py  storage.py
src/funch/storage/string_database/: interface.py  plain_database.py  sqlite_database.py
src/funch/workflow/: __init__.py  basic.py  island.py
tests/integration/cap_set/: n8_function_body.txt  program.py  test_evaluators.py
